log/futures.0.3.31.log
[futures] download directory: /var/tmp/top100_artifacts/futures-0.3.31
+ curl -sL https://crates.io/api/v1/crates/futures/0.3.31/download
+ tar xzf -
+ cd /var/tmp/top100_artifacts/futures-0.3.31
+ cargo clean
     Removed 0 files
+ cargo +stable test ''
    Blocking waiting for file lock on package cache
    Updating crates.io index
    Blocking waiting for file lock on package cache
     Locking 75 packages to latest compatible versions
      Adding tokio v0.1.22 (available: v1.47.1)
    Blocking waiting for file lock on package cache
   Compiling autocfg v1.5.0
   Compiling cfg-if v0.1.10
   Compiling libc v0.2.175
   Compiling maybe-uninit v2.0.0
   Compiling lazy_static v1.5.0
   Compiling futures v0.1.31
   Compiling semver-parser v0.7.0
   Compiling crossbeam-utils v0.7.2
   Compiling slab v0.4.11
   Compiling semver v0.9.0
   Compiling rustc_version v0.2.3
   Compiling iovec v0.1.4
   Compiling log v0.4.27
   Compiling scopeguard v1.2.0
   Compiling proc-macro2 v1.0.97
   Compiling tokio-executor v0.1.10
   Compiling byteorder v1.5.0
   Compiling unicode-ident v1.0.18
   Compiling parking_lot_core v0.6.3
   Compiling parking_lot v0.9.0
   Compiling bytes v0.4.12
   Compiling num_cpus v1.17.0
   Compiling net2 v0.2.39
   Compiling memoffset v0.5.6
   Compiling tokio-io v0.1.13
   Compiling quote v1.0.40
   Compiling smallvec v0.6.14
   Compiling syn v2.0.104
   Compiling mio v0.6.23
   Compiling lock_api v0.3.4
   Compiling crossbeam-epoch v0.8.2
   Compiling fnv v1.0.7
   Compiling tokio-sync v0.1.8
   Compiling tokio-reactor v0.1.12
   Compiling futures-core v0.3.31
   Compiling futures-sink v0.3.31
   Compiling crossbeam-deque v0.7.4
   Compiling futures-channel v0.3.31
   Compiling tokio-codec v0.1.2
   Compiling crossbeam-queue v0.2.3
   Compiling futures-task v0.3.31
   Compiling memchr v2.7.5
   Compiling futures-io v0.3.31
   Compiling pin-utils v0.1.0
   Compiling pin-project-lite v0.2.16
   Compiling tokio-threadpool v0.1.18
   Compiling mio-uds v0.6.8
   Compiling tokio-uds v0.2.7
   Compiling tokio-udp v0.1.6
   Compiling tokio-fs v0.1.7
   Compiling tokio-tcp v0.1.4
   Compiling tokio-timer v0.2.13
   Compiling tokio-current-thread v0.1.7
   Compiling tokio v0.1.22
   Compiling static_assertions v1.1.0
   Compiling assert_matches v1.5.0
   Compiling futures-macro v0.3.31
   Compiling pin-project-internal v1.1.10
   Compiling futures-util v0.3.31
   Compiling pin-project v1.1.10
   Compiling futures-executor v0.3.31
   Compiling futures v0.3.31 (/var/tmp/top100_artifacts/futures-0.3.31)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/stream_futures_ordered.rs:6:5
  |
6 | use futures_test::task::noop_context;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
6 - use futures_test::task::noop_context;
6 + use futures_task::task::noop_context;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/oneshot.rs:3:5
  |
3 | use futures_test::future::FutureTestExt;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
3 - use futures_test::future::FutureTestExt;
3 + use futures_task::future::FutureTestExt;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/io_read_line.rs:7:5
  |
7 | use futures_test::io::AsyncReadTestExt;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
7 - use futures_test::io::AsyncReadTestExt;
7 + use futures_task::io::AsyncReadTestExt;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures_test`
 --> tests/io_read_line.rs:8:5
  |
8 | use futures_test::task::noop_context;
  |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `futures_test`
  |
help: there is a crate or module with a similar name
  |
8 - use futures_test::task::noop_context;
8 + use futures_task::task::noop_context;
  |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `futures` (test "stream_futures_ordered") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0599]: no method named `interleave_pending` found for reference `&'static [u8; 2]` in the current scope
  --> tests/io_read_line.rs:82:25
   |
82 |     let mut buf = b"12".interleave_pending();
   |                         ^^^^^^^^^^^^^^^^^^ method not found in `&[u8; 2]`

error[E0599]: no method named `interleave_pending` found for struct `IntoAsyncRead` in the current scope
  --> tests/io_read_line.rs:88:80
   |
88 |         stream::iter(vec![&b"12"[..], &b"\n\n"[..]]).map(Ok).into_async_read().interleave_pending();
   |                                                                                ^^^^^^^^^^^^^^^^^^ method not found in `IntoAsyncRead<Map<Iter<IntoIter<&[u8]>>, ...>>`

error[E0599]: no method named `run_in_background` found for struct `MapOk` in the current scope
  --> tests/oneshot.rs:13:38
   |
13 |     rx1.map_ok(move |x| tx2.send(x)).run_in_background();
   |                                      ^^^^^^^^^^^^^^^^^ method not found in `MapOk<Receiver<i32>, {closure@oneshot.rs:13:16}>`

Some errors have detailed explanations: E0433, E0599.
For more information about an error, try `rustc --explain E0433`.
error[E0599]: no method named `run_in_background` found for struct `MapOk` in the current scope
  --> tests/oneshot.rs:24:47
   |
24 |     rx1.map_ok(move |x| tx2.send(x).unwrap()).run_in_background();
   |                                               ^^^^^^^^^^^^^^^^^ method not found in `MapOk<Receiver<i32>, {closure@oneshot.rs:24:16}>`

error: could not compile `futures` (test "io_read_line") due to 4 previous errors
error[E0599]: no method named `run_in_background` found for struct `MapOk` in the current scope
  --> tests/oneshot.rs:33:47
   |
33 |     rx1.map_ok(move |x| tx2.send(x).unwrap()).run_in_background();
   |                                               ^^^^^^^^^^^^^^^^^ method not found in `MapOk<Receiver<i32>, {closure@oneshot.rs:33:16}>`

error[E0599]: no method named `run_in_background` found for struct `Map` in the current scope
  --> tests/oneshot.rs:44:54
   |
44 |     rx1.map(move |result| tx2.send(result).unwrap()).run_in_background();
   |                                                      ^^^^^^^^^^^^^^^^^ method not found in `Map<Receiver<i32>, {closure@oneshot.rs:44:13}>`

error[E0599]: no method named `run_in_background` found for struct `Map` in the current scope
  --> tests/oneshot.rs:55:54
   |
55 |     rx1.map(move |result| tx2.send(result).unwrap()).run_in_background();
   |                                                      ^^^^^^^^^^^^^^^^^ method not found in `Map<Receiver<i32>, {closure@oneshot.rs:55:13}>`

error: could not compile `futures` (test "oneshot") due to 6 previous errors
+ RESULT=101
+ cd /var/tmp/top100_artifacts
+ rm -rf /var/tmp/top100_artifacts/futures-0.3.31
+ exit 101
